...

                    <LinearLayout
                        android:id="@+id/manually_add_upper_portion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/book_name_edit_text"
                            style="@style/CustomEditText"
                            android:layout_marginTop="10dp"
...

                        <EditText
                            android:id="@+id/author_name_edit_text"
                            style="@style/CustomEditText"
                            android:layout_marginTop="10dp"
...

                        <EditText
                            android:id="@+id/isbn13"
                            style="@style/CustomEditText"
                            android:layout_marginTop="10dp"
...

                        <EditText
                            android:id="@+id/isbn10"
                            style="@style/CustomEditText"
                            android:layout_marginTop="10dp"
...

                        <EditText
                            android:id="@+id/publisher_name_edit_text"
                            style="@style/CustomEditText"
                            android:layout_marginTop="10dp"
...

                        <Spinner
                            android:id="@+id/binding_spinner"
                            style="@style/spinner_style"
                            android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/book_price_edit_text"
                            style="@style/CustomEditText"
                            android:layout_marginTop="10dp"
...

                    <LinearLayout
                        android:id="@+id/auto_add_upper_portion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <RadioButton
                            android:id="@+id/first_radio_button"
                            style="@style/SemiOpaqueRegular14"
                            android:layout_width="wrap_content"
...

                        <RadioButton
                            android:id="@+id/second_radio_button"
                            style="@style/SemiOpaqueRegular14"
                            android:layout_width="wrap_content"
...

                        <RadioButton
                            android:id="@+id/third_radio_button"
                            style="@style/SemiOpaqueRegular14"
                            android:layout_width="wrap_content"
...

                    <EditText
                        android:id="@+id/tags_edit_text"
                        style="@style/CustomEditText"
                        android:layout_marginTop="10dp"
...

                    <Spinner
                        android:id="@+id/genre_spinner"
                        style="@style/spinner_style"
                        android:layout_width="match_parent"
...

                    <EditText
                        android:id="@+id/comment_edit_text"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/back"
                style="@style/InactiveTextStyle"
                android:clickable="true"
...

            <TextView
                android:id="@+id/submit"
                style="@style/ActiveTextStyle"
                android:clickable="true"
...
