<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/discription_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#E8E8E8">

            <TextView
                android:id="@+id/page_discription"
                style="@style/ClearMedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp" />

            <TextView
                android:id="@+id/step_text"
                style="@style/OpaqueRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/add_book_activity_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/discription_layout"
            android:orientation="vertical">

        </LinearLayout>


    </RelativeLayout>
</layout>